# memcache

./: .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  discussion  readme.md
artifacts/include/folly/: folly-config.h
artifacts/lib/: libfolly.la  libfollybenchmark.la  libfollybenchmark.so.57.0.0  libzstd.so.1.1.1
artifacts/lib/cmake/mstch/: mstch-config-version.cmake  mstch-targets-release.cmake  mstch-targets.cmake
src/: CMakeLists.txt  KVCache.h  MemcacheMain.cpp  MemcacheService.cpp  MemcacheService.h  Shard.cpp  Shard.h  Types.cpp  Types.h
src/test/: CMakeLists.txt  MemcacheServiceTest.cpp  ShardTest.cpp
